--- a/app.json
+++ b/app.json
@@ -1,8 +1,23 @@
 {
     "name": "collegeproject",
-    "repository": "https://github.com/stam76/collegeproject",
+  "description": "This app does one little thing, and does it well.",
+  "keywords": [
+    "productivity",
+    "HTML5",
+    "scalpel"
+  ],
+  "website": "https://small-sharp-tool.com/",
+  "repository": "https://github.com/jane-doe/small-sharp-tool",
+  "logo": "https://small-sharp-tool.com/logo.svg",
+  "success_url": "/welcome",
+  "scripts": {
+    "postdeploy": "bundle exec rake bootstrap"
+  },
     "env": {
-        "TOKEN": {""}
+    "SECRET_TOKEN": {
+      "description": "A secret key for verifying the integrity of signed cookies.",
+      "generator": "secret"
+    }
     },
     "addons": [],
     "buildpacks": [
